--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,10 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roll a dice</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/Eval-Roll-A-Dice/BOOTSTRAP/bootstrap.css">
     <link rel="stylesheet" href="/Eval-Roll-A-Dice/CSS/style.css">
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap");
+        @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+      </style>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row no-gutters">
+            <!-- Container -->
+            <div class="contain col-sm-10">
+                <!-- Player 1 -->
+                <div class="player-0 col-sm-5" id="box-player-0">
+                    <div class="name-player" id="name-0">PLAYER 1</div>
+                    <div class="global-score-0" id="score-0">0</div>
+                    
+                    <div class="round-box-0">
+                        <div class="round-text-0">Round</div>
+                        <div class="round-score-0" id="round-0">0</div>
+                    </div>
+                </div>
+                <div class="player-1 col-sm-5" id="box-player-1">
+                    <div class="name-player" id="name-1">Player 2</div>
+                    <div class="global-score-1" id="score-1">0</div>
+
+                    <div class="round-box-1">
+                        <div class="round-text-1">Round</div>
+                        <div class="round-score-1" id="round-1"></div>
+                    </div>
+                </div>
+            
+                <button class="newGame">
+                    <i class="bi bi-plus-circle"></i>
+                    new game
+                </button>
+                <button class="roll">
+                    <i class="bi bi-arrow-repeat"></i>
+                    Roll
+                </button>
+                <button class="hold">
+                    <i class="bi bi-save"></i>
+                    hold
+                </button>
+            </div>
+        </div>
+    </div>
     <script src="/Eval-Roll-A-Dice/JS/script.js"></script>
+  
+
 </body>
 </html>
