--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,20 +21,20 @@
                 <!-- Player 1 -->
                 <div class="player-0 col-sm-5" id="box-player-0">
                     <div class="name-player" id="name-0">PLAYER 1</div>
-                    <div class="global-score-0" id="score-0">0</div>
+                    <div class="global-score" id="score-0">0</div>
                     
-                    <div class="round-box-0">
-                        <div class="round-text-0">Round</div>
-                        <div class="round-score-0" id="round-0">0</div>
+                    <div class="round-box">
+                        <div class="round-text">Round</div>
+                        <div class="round-score" id="round-0">0</div>
                     </div>
                 </div>
                 <div class="player-1 col-sm-5" id="box-player-1">
                     <div class="name-player" id="name-1">Player 2</div>
-                    <div class="global-score-1" id="score-1">0</div>
+                    <div class="global-score" id="score-1">0</div>
 
-                    <div class="round-box-1">
-                        <div class="round-text-1">Round</div>
-                        <div class="round-score-1" id="round-1"></div>
+                    <div class="round-box">
+                        <div class="round-text">Round</div>
+                        <div class="round-score" id="round-1">0</div>
                     </div>
                 </div>
             
@@ -44,7 +44,7 @@
                 </button>
                 <button class="roll">
                     <i class="bi bi-arrow-repeat"></i>
-                    Roll
+                    Roll Dice
                 </button>
                 <button class="hold">
                     <i class="bi bi-save"></i>
