--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,7 @@
             <!-- Container -->
             <div class="contain col-sm-10">
                 <!-- Player 1 -->
-                <div class="player-0 col-sm-5" id="box-player-0">
+                <div class="player-0 col-sm-5 active" id="box-player-0">
                     <div class="name-player" id="name-0">PLAYER 1</div>
                     <div class="global-score" id="score-0">0</div>
                     
@@ -38,18 +38,20 @@
                     </div>
                 </div>
             
-                <button class="newGame">
+                <button class="newGame" id="newGame">
                     <i class="bi bi-plus-circle"></i>
                     new game
                 </button>
-                <button class="roll">
+                <button class="roll" id ="rollDice">
                     <i class="bi bi-arrow-repeat"></i>
                     Roll Dice
                 </button>
-                <button class="hold">
+                <button class="hold" id="hold-round">
                     <i class="bi bi-save"></i>
                     hold
                 </button>
+
+                <img src="/Eval-Roll-A-Dice/IMG/dès-5.png" alt="dice" class="dice" style="display: none;">
             </div>
         </div>
     </div>
