Evolution du jeu

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,7 @@
             <!-- Container -->
             <div class="contain col-sm-10">
                 <!-- Player 1 -->
-                <div class="player-0 col-sm-5 active" id="box-player-0">
+                <div class="box-player-0 col-sm-5 active" id="box-player-0">
                     <div class="name-player" id="name-0">PLAYER 1</div>
                     <div class="global-score" id="score-0">0</div>
                     
@@ -28,7 +28,7 @@
                         <div class="round-score" id="round-0">0</div>
                     </div>
                 </div>
-                <div class="player-1 col-sm-5" id="box-player-1">
+                <div class="box-player-1 col-sm-5" id="box-player-1">
                     <div class="name-player" id="name-1">Player 2</div>
                     <div class="global-score" id="score-1">0</div>
 
