--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="/Eval-Roll-A-Dice/BOOTSTRAP/bootstrap.css" />
-    <link rel="stylesheet" href="/Eval-Roll-A-Dice/CSS/style.css" />
+    <link rel="stylesheet" href="/BOOTSTRAP/bootstrap.css" />
+    <link rel="stylesheet" href="/CSS/style.css">
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
@@ -41,7 +41,7 @@
               <div class="round-score" id="round-1">0</div>
             </div>
           </div>
-
+          
           <button class="newGame" id="newGame">
             <i class="bi bi-plus-circle"></i>
             new game
@@ -64,6 +64,6 @@
         </div>
       </div>
     </div>
-    <script src="/Eval-Roll-A-Dice/JS/script.js"></script>
+    <script src="/JS/script.js"></script>
   </body>
 </html>
